# orchestrai

./: .env.example  .env.locate  .gitignore  LICENSE  README.md  eslintrc.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vercel.json
.cursor/rules/: global-cursor-rules.md  global-rules.mdc  prisma-rules.mdc  python-rules.mdc  repo-rules.mdc  typescript-rules.mdc
.github/workflows/: ci.yaml
.turbo/daemon/: 544b26f797930a2b-turbo.log.2025-05-22
apps/api/: .env.example  README.md  main.py  package.json  pyproject.toml  requirements.txt
apps/api/db/client/: actions.py  client.py  enums.py  metadata.py  models.py  schema.prisma  types.py
apps/api/src/api/: main.py
apps/api/src/api/core/: auth.py  config.py
apps/api/src/api/db/: __init__.py  prisma_client.py
apps/api/src/api/routes/v1/: __init__.py  agents.py  auth.py  chat.py  chats.py  documents.py  projects.py  tenants.py  users.py
apps/api/src/api/schemas/: agent.py  auth.py  candidate.py  chat.py  document.py  job.py  project.py  tenant.py
apps/api/src/api/scripts/: seed.py
apps/api/src/api/services/: auth.py  auth_dependency.py  document_processor.py  llm_service.py  retriever.py
apps/api/src/core/: auth.py
apps/api/src/db/client/: actions.py  bases.py  client.py  enums.py  metadata.py  models.py  schema.prisma  types.py
apps/api/src/routes/v1/: agents.py
apps/api/src/schemas/: agent.py  chat.py
apps/api/src/services/: llm_service.py  retriever.py
apps/docs/: routes.mdx
apps/web/: .env.local.example  .eslintrc.js  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/public/hirewise_logo_assets/: manifest.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/providers/: TenantProvider.tsx  ThemeProvider.tsx
apps/web/src/styles/: fonts.css  globals.css
scripts/: prisma_python_env.sh
(+2 files in other folders)
